==> tom38121605/RD_02_mcu_STM32_txt/STM32_01_H7A3_F429_VSCODE/_Awork52_STMH7A3_txt/AUDIO-H7A3RI-RX-V43_18_af_i2s_dmairq_log_k/Src/HAL/Src/STM32/HAL_DW3000.c <==
#include "main.h"
#include "HAL_uwb.h"
#include "HAL_SPI.h"
#include "HAL_error.h"
#include "HAL_sleep.h"
#include "deca_device_api.h"
#include "deca_interface.h"
#include "rf_tuning_config.h"

static void hal_uwb_init_irq(void)
{
    HAL_NVIC_SetPriority(hal_uwb.uwbs->ext_io_cfg->irqN, configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY, 0);
}

static void hal_uwb_disable_irq(void)
{
	HAL_NVIC_DisableIRQ(hal_uwb.uwbs->ext_io_cfg->irqN);
}

static void hal_uwb_enable_irq(void)
{
    HAL_NVIC_SetPriority(hal_uwb.uwbs->ext_io_cfg->irqN, configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY, 0);
    HAL_NVIC_EnableIRQ(hal_uwb.uwbs->ext_io_cfg->irqN);
}

static void hal_uwb_reset_chip(void)
{
    const struct  uwbs_port_config_STM_s *port = (const struct uwbs_port_config_STM_s *)hal_uwb.uwbs->void_cfg;

    GPIO_InitTypeDef GPIO_InitStruct;

    GPIO_InitStruct.Pin = hal_uwb.uwbs->ext_io_cfg->rstPin;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_PULLDOWN;
    HAL_GPIO_Init(port->rstPort, &GPIO_InitStruct);

    HAL_GPIO_WritePin(port->rstPort, hal_uwb.uwbs->ext_io_cfg->rstPin, RESET);

    usleep(200);

    GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(port->rstPort, &GPIO_InitStruct);

    usleep(2500);
}

decaIrqStatus_t decamutexon(void)
{
    volatile decaIrqStatus_t s;

    s = check_IRQ_enabled(hal_uwb.uwbs->ext_io_cfg->irqN);

    if (s)
    {
        HAL_NVIC_DisableIRQ(hal_uwb.uwbs->ext_io_cfg->irqN); //disable the external interrupt line from MASTER chip IRQ
        __DSB();
        __ISB();
    }

    return s;
}

void decamutexoff(decaIrqStatus_t s)
{
    if (s)
    {
        HAL_NVIC_EnableIRQ(hal_uwb.uwbs->ext_io_cfg->irqN);
    }
}

static inline uint32_t port_CheckEXT_IRQ(void)
{
	GPIO_TypeDef *port = ((struct uwbs_port_config_STM_s*)hal_uwb.uwbs->void_cfg)->irqPort;
	uint16_t pin = hal_uwb.uwbs->ext_io_cfg->irqPin;

    return HAL_GPIO_ReadPin(port, pin);
}
